# TIAGo_autonomous_visits

./: README
Dialogos/: Textos_visita_TIAGo_NUEVO.odt
Dialogos/dialogos robot (ingles y español)/ESPAÑOL/: centroE_ES  centroG_ES  centroH_ES  entradaD_ES  entradaE_ES  entradaF_ES  entradaG_ES  entradaH_ES  entradaprincipal_ES  vitrina1_ES
Dialogos/dialogos robot (ingles y español)/INGLES/: centroG_EN  centroH_EN  entradaE_EN  entradaG_EN  entradaH_EN  entradaprincipal_EN  vitrina1_EN
Dialogos/dialogos visita ABB/: TEXTOS DIÁLOGOS PARA VISITA ABB.odt
Dialogos/dialogos visita puertas abiertas (visita_pa)/: TEXTOS DIÁLOGOS PARA VISITA PUERTAS ABIERTAS.odt
TIAGo_PaquetesVisita/RoomLearningTool/: RoomLearningTool  RoomLearningTool.pro  RoomLearningTool.pro.user.10  RoomLearningTool.pro.user.d86df43  hobbit_map_20130221.pgm  hobbit_map_20130221.yaml  hobbit_map_20130221.yaml~  mainwindow.cpp  mainwindow.h  mainwindow.ui  mypanel.cpp  mypanel.h  myqlabel.cpp  myqlabel.cpp~  myqlabel.h  places_files  resource.qrc  ui_mainwindow.h
TIAGo_PaquetesVisita/amcl_tiago/: CMakeLists.txt  package.xml
TIAGo_PaquetesVisita/map_provider/: package.xml
TIAGo_PaquetesVisita/measurements_visita/: CMakeLists.txt  measurements.txt  package.xml
TIAGo_PaquetesVisita/measurements_visita/src/: cmeasurements_visita.cpp  cmeasurements_visita.h  measurements_visita.cpp
TIAGo_PaquetesVisita/mensajes/: CMakeLists.txt  package.xml
TIAGo_PaquetesVisita/mensajes/msg/: Place.msg  PlacesVector.msg  Pose2DStamped.msg  Room.msg  RoomsVector.msg
TIAGo_PaquetesVisita/object_detection/: CMakeLists.txt  package.xml
TIAGo_PaquetesVisita/object_detection/src/: c_object_detection.cpp  c_object_detection.h  object_detection.cpp
TIAGo_PaquetesVisita/pal_interaction_msgs/: CMakeLists.txt
TIAGo_PaquetesVisita/pal_navigation_msgs/: CHANGELOG.rst  package.xml
TIAGo_PaquetesVisita/places_interpretation/: CMakeLists.txt  CMakeLists.txt~  manifest.xml~  package.xml  package.xml~
TIAGo_PaquetesVisita/places_interpretation/.svn/: all-wcprops  entries
TIAGo_PaquetesVisita/places_interpretation/.svn/text-base/: CMakeLists.txt.svn-base  package.xml.svn-base
TIAGo_PaquetesVisita/places_interpretation/include/.svn/: all-wcprops  entries
TIAGo_PaquetesVisita/places_interpretation/include/PlacesInterpretation/: cPlacesInterpretation.h  cPlacesInterpretation.h~
TIAGo_PaquetesVisita/places_interpretation/launch/: startup.launch
TIAGo_PaquetesVisita/places_interpretation/launch/.svn/: entries
TIAGo_PaquetesVisita/places_interpretation/launch/.svn/text-base/: places.xml.svn-base  startup.launch.svn-base
TIAGo_PaquetesVisita/places_interpretation/src/: PlacesInterpretation.cpp  PlacesInterpretation.cpp~  cPlacesInterpretation.cpp  cPlacesInterpretation.cpp~  cPlacesInterpretation_copy_xmlformat.cpp~
TIAGo_PaquetesVisita/places_interpretation/src/.svn/: all-wcprops  entries
TIAGo_PaquetesVisita/places_interpretation/src/.svn/text-base/: PlacesInterpretation.cpp.svn-base  cPlacesInterpretation.cpp.svn-base
TIAGo_PaquetesVisita/places_learning_gui/: CMakeLists.txt
TIAGo_PaquetesVisita/places_learning_gui/.svn/: all-wcprops  entries
TIAGo_PaquetesVisita/places_learning_gui/.svn/text-base/: CMakeLists.txt.svn-base  package.xml.svn-base
TIAGo_PaquetesVisita/places_learning_gui/include/.svn/: all-wcprops  entries
TIAGo_PaquetesVisita/places_learning_gui/include/PlacesLearningGui/: mainwindow.h  mydialog.h  mydialog.ui  mypanel.h  myqlabel.h  qnode.hpp  structs.h  ui_mainwindow.h  ui_mydialog.h
TIAGo_PaquetesVisita/places_learning_gui/include/PlacesLearningGui/.svn/: all-wcprops  entries
TIAGo_PaquetesVisita/places_learning_gui/include/PlacesLearningGui/.svn/text-base/: mainwindow.h.svn-base  mydialog.ui.svn-base  myqlabel.h.svn-base  qnode.hpp.svn-base  ui_mainwindow.h.svn-base  ui_mydialog.h.svn-base
TIAGo_PaquetesVisita/places_learning_gui/launch/.svn/: all-wcprops  entries
TIAGo_PaquetesVisita/places_learning_gui/launch/.svn/text-base/: startup.launch.svn-base
TIAGo_PaquetesVisita/places_learning_gui/src/: PlacesLearningGui.cpp  mainwindow.cpp  mydialog.cpp  myqlabel.cpp  qnode.cpp
TIAGo_PaquetesVisita/places_learning_gui/src/.svn/: all-wcprops  entries
TIAGo_PaquetesVisita/places_learning_gui/src/.svn/text-base/: mainwindow.cpp.svn-base  mydialog.cpp.svn-base  mypanel.cpp.svn-base  myqlabel.cpp.svn-base  qnode.cpp.svn-base
TIAGo_PaquetesVisita/places_learning_gui/ui/: mainwindow.ui
TIAGo_PaquetesVisita/places_learning_gui/ui/.svn/: all-wcprops  entries
TIAGo_PaquetesVisita/pugixml/: CMakeLists.txt~
TIAGo_PaquetesVisita/sending_goals/: CMakeLists.txt  CMakeLists.txt~  manifest.xml~  package.xml  package.xml~
TIAGo_PaquetesVisita/servicios/: CMakeLists.txt  package.xml
TIAGo_PaquetesVisita/visita/: CMakeLists.txt  package.xml  rviz_TIAGo.rviz  salas_car  salas_car_places
TIAGo_PaquetesVisita/visita/dialogos_EN/: baños  centroE  entradaD  entradaF  escalera
TIAGo_PaquetesVisita/visita/dialogos_ES/: baños  centroD  centroE  centroG  centroH  entradaE  entradaG  entradaprincipal  escalera  vitrina1  vitrina3  vitrina4
TIAGo_PaquetesVisita/visita/include/PlacesInterpretation/: cPlacesInterpretation.h  structs.h
TIAGo_PaquetesVisita/visita/include/PlacesInterpretation/.svn/: all-wcprops  entries
TIAGo_PaquetesVisita/visita/include/PlacesInterpretation/.svn/text-base/: cPlacesInterpretation.h.svn-base
TIAGo_PaquetesVisita/visita/include/visita/: cvisita.h
TIAGo_PaquetesVisita/visita/launch/: startup.launch  startup_tiago.launch  visita_completa.launch
TIAGo_PaquetesVisita/visita/launch/.svn/: all-wcprops
TIAGo_PaquetesVisita/visita/maps/: mapa_car2.pgm
TIAGo_PaquetesVisita/visita/programas_visita/: visita1  visita2  visitaABB1_escalera  visitaABB2_entrada  visita_centroD  visita_entradaD  visita_entradaE  visita_entradaprincipal  visita_escalera  visita_pa_parte1  visita_pa_parte2  visita_pruebas  visita_vitrina1  visita_vitrina3
TIAGo_PaquetesVisita/visita/src/: PlacesInterpretation.cpp  cPlacesInterpretation.cpp  cvisita.cpp  sendingGoals2.cpp  visita.cpp
(+44 files in other folders)
