<?xml version="1.0"?>
<package format="2">
  <name>object_detection</name>
  <version>0.0.0</version>
  <description>This package provides a node to interact with objects detected by yolov8 while node "visita" is running</description>
  
  <author>Marcos Barranco</author>
  <maintainer email="marcos@todo.todo">Marcos</maintainer>


  <license>TODO</license>


  <!-- <url> poner aqui la url de github cuando se suba </url> -->


  <buildtool_depend>catkin</buildtool_depend>
  
  
  <!-- DEPENDENCIAS (mismas que en CMakelists.txt) -->
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>pal_interaction_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>yolov8_ros_msgs</build_depend> 
  <build_depend>geometry_msgs</build_depend>
  
  <build_depend>tf</build_depend>
  <build_depend>actionlib</build_depend>
  
  
  
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>pal_interaction_msgs</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>yolov8_ros_msgs</build_export_depend>   
  <build_export_depend>geometry_msgs</build_export_depend>
  
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  
  
  
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>pal_interaction_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>yolov8_ros_msgs</exec_depend>  
  <exec_depend>geometry_msgs</exec_depend>
  
  <exec_depend>tf</exec_depend>
  <exec_depend>actionlib</exec_depend>


</package>
