<?xml version="1.0"?>
<package format="2">
  <name>visita</name>
  <version>0.0.0</version>
  <description>The visita package</description>

  <maintainer email="oscar@todo.todo">oscar</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>actionlib</build_depend>
  <build_depend>mensajes</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>pugixml</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>pal_interaction_msgs</build_depend>
  <build_depend>roslib</build_depend> 
  
  
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>mensajes</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>pugixml</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>pal_interaction_msgs</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  
  
  <exec_depend>actionlib</exec_depend>
  <exec_depend>mensajes</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>pugixml</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>pal_interaction_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  
  
  
  

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>

